tests/parser/parser-first.swg
} // swc-expected-error ParserUnexpectedToken
{ // swc-expected-error ParserUnterminatedBlock
;